syntax = 'proto3';

package tm2.tx;

message Tx {
  // specific message types
  repeated TxMessage messages = 1;
  // transaction costs (fee)
  TxFee fee = 2;
  // the signatures for the transaction
  repeated TxSignature signatures = 3;
  // memo attached to the transaction
  string memo = 4;
}

message TxFee {
  // gas limit
  sint64 gas_wanted = 1;
  // gas fee details (<value><denomination>)
  string gas_fee = 2;
}

message TxSignature {
  // public key associated with the signature
  PublicKey pubKey = 1;
  // the signature
  bytes signature = 2;
}

message PublicKey {
  // type of public key
  string type = 1;
  // public key value
  bytes value = 2;
}

message TxMessage {
  // URL of the message
  string typeUrl = 1;
  // data value of the message
  bytes value = 2;
}